--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,33 @@ variables:
   azureConnection: 'FALU - Azure'
 
 steps:
+- task: UsePythonVersion@0
+  displayName: 'Use Python 3.9'
+  inputs:
+    versionSpec: '3.9'
+    architecture: 'x64'
+
+- script: |
+    python -m venv .venv
+    source .venv/bin/activate
+    python -m pip install --upgrade pip
+    pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
+  displayName: 'Install dependencies'
+  workingDirectory: 'identity-verification-python'
+
+- task: ArchiveFiles@2
+  displayName: "Archive files"
+  inputs:
+    rootFolderOrFile: "$(Build.SourcesDirectory)/identity-verification-python"
+    includeRootFolder: false
+    archiveFile: "$(Build.ArtifactStagingDirectory)/identity-verification-python-$(Build.BuildId).zip"
+
+- task: PublishBuildArtifacts@1
+  displayName: "Publish drop artifact"
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    artifactName: 'drop'
+
 - task: replacetokens@3
   displayName: 'Replace tokens in *.bicep'
   inputs:
@@ -18,8 +45,14 @@ steps:
     actionOnMissing: fail
     verbosity: detailed
 
+- task: PublishBuildArtifacts@1
+  displayName: "Publish deploy artifact"
+  inputs:
+    PathtoPublish: '$(Build.SourcesDirectory)/main.bicep'
+    artifactName: 'deploy'
+
 - task: AzureCLI@2
-  displayName: "Deploy to Container Apps"
+  displayName: "Deploy to Infrastructure"
   inputs:
     azureSubscription: $(azureConnection)
     scriptType: bash
@@ -27,4 +60,13 @@ steps:
     inlineScript: >
       az deployment group create
       --resource-group 'FALU-SAMPLES'
-      --template-file main.bicep
+      --template-file '$(Build.SourcesDirectory)/main.bicep'
+
+- task: AzureFunctionApp@1
+  displayName: "Deploy falu-samples-python"
+  inputs:
+    azureSubscription: $(azureConnection)
+    appType: functionAppLinux # default is functionApp
+    appName: 'falu-samples-python'
+    package: '$(Build.ArtifactStagingDirectory)/identity-verification-python-$(Build.BuildId).zip'
+    resourceGroupName: 'FALU-SAMPLES'
