--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,13 @@ trigger:
     exclude:
     - '**/README.md'
 
+schedules:
+- cron: "0 0 * * 0" # ensure the certs are valid
+  displayName: Weekly build
+  branches:
+    include:
+    - main
+
 variables:
   dockerImageTag: '$(Build.BuildNumber)'
   dockerComposeFile: '**/docker-compose.yml'
