Update schedule to always run

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,8 +8,9 @@ trigger:
     - '**/README.md'
 
 schedules:
-- cron: "0 0 * * 1" # ensure the certs are valid
+- cron: "0 10 * * MON" # ensure the certs are valid (10am UTC, Mondays)
   displayName: Weekly build
+  always: true # always run this schedule even if there are no changes
   branches:
     include:
     - main
