--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,7 @@ updates:
   ignore:
   - dependency-name: "*"
     update-types: ["version-update:semver-major"]
+  - dependency-name: "urllib3"
 - directory: /
   package-ecosystem: "docker"
   schedule:
