--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,12 +9,12 @@ updates:
   directory: "/python" # Location of package manifests
   schedule:
     interval: "monthly"
-  # groups:
-  #   python-packages:
-  #     patterns:
-  #     - "*"
-  ignore:
-  - dependency-name: "urllib3"
+  groups:
+    python-packages:
+      patterns:
+        - "*"
+      exclude-patterns:
+        - "urllib3" # it causes the whole group to fail
 - directory: /
   package-ecosystem: "docker"
   schedule:
