--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,9 @@ updates:
   directory: "/python" # Location of package manifests
   schedule:
     interval: "monthly"
+  reviewers:
+    - SecyWecy
+    - mburumaxwell
   groups:
     python-packages:
       patterns:
@@ -17,3 +20,6 @@ updates:
   package-ecosystem: "docker"
   schedule:
     interval: "monthly"
+  reviewers:
+    - SecyWecy
+    - mburumaxwell
