--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,18 +65,6 @@ jobs:
         name: deploy
         retention-days: 1
 
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: 'Docker Login'
-      uses: azure/docker-login@v1
-      with:
-        login-server: ${{ env.ACR_LOGIN_SERVER }}
-        username: ${{ secrets.AZURE_SP_CLIENT_ID }}
-        password: ${{ secrets.AZURE_SP_CLIENT_SECRET }}
-
     - name: Build docker images
       run: >
         docker compose
@@ -86,6 +74,20 @@ jobs:
         --parallel
       env:
         DOCKER_IMAGE_TAG: ${{ steps.gitversion.outputs.nuGetVersionV2 }}
+
+    - name: Azure Login
+      if: ${{ !contains(github.ref, 'dependabot/') && ((github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags')) }}
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: 'Docker Login'
+      if: ${{ !contains(github.ref, 'dependabot/') && ((github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags')) }}
+      uses: azure/docker-login@v1
+      with:
+        login-server: ${{ env.ACR_LOGIN_SERVER }}
+        username: ${{ secrets.AZURE_SP_CLIENT_ID }}
+        password: ${{ secrets.AZURE_SP_CLIENT_SECRET }}
 
     - name: Push docker images
       if: ${{ !contains(github.ref, 'dependabot/') && ((github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags')) }}
