--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ on:
     - LICENSE
     - CHANGELOG.md
     - docs/**
+    - .vscode/**
+    - .github/**
+    - '!.github/workflows/build.yml'
     - '**/README.md'
   pull_request:
     branches:
@@ -20,6 +23,9 @@ on:
     - LICENSE
     - CHANGELOG.md
     - docs/**
+    - .vscode/**
+    - .github/**
+    - '!.github/workflows/build.yml'
     - '**/README.md'
   schedule:
   - cron: '0 10 */15 * *'
