--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,6 @@ on:
     - .github/**
     - '!.github/workflows/build.yml'
     - '**/README.md'
-  schedule:
-  - cron: '0 10 */15 * *'
   workflow_dispatch:
 
 env:
@@ -119,7 +117,7 @@ jobs:
     if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     needs: Build
-    timeout-minutes: 10
+    timeout-minutes: 5
 
     concurrency:
       group: ${{ github.workflow }}
@@ -145,7 +143,7 @@ jobs:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: 'FALU-SAMPLES'
         template: '${{ github.workspace }}/deploy/main.bicep'
-        parameters: '${{ github.workspace }}/deploy/main.parameters.json'
+        parameters: reviewAppNameSuffix=${{ env.REVIEW_APP_NAME_SUFFIX }}
         deploymentName: ${{ env.version}}
         scope: 'resourcegroup'
 
