--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,7 @@ updates:
     directory: '/python'
     schedule:
       interval: 'monthly'
+      time: '02:00'
     reviewers:
       - sethonyango
       - mburumaxwell
@@ -20,6 +21,7 @@ updates:
     directory: /
     schedule:
       interval: 'monthly'
+      time: '02:00'
     reviewers:
       - sethonyango
       - mburumaxwell
@@ -27,11 +29,13 @@ updates:
     directory: '/'
     schedule:
       interval: 'monthly'
+      time: '02:00'
     reviewers:
       - mburumaxwell
   - package-ecosystem: 'devcontainers'
     directory: '/'
     schedule:
       interval: 'monthly'
+      time: '02:00'
     reviewers:
       - mburumaxwell
