--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       dockerfile: Dockerfile.python
       context: .
+      cache_from:
+        - ghcr.io/faluapp/falu-samples/identity-verification:latest
     ports: ["8000:8000"]
     labels:
       - com.github.image.run.id=${GITHUB_RUN_ID:-0}
@@ -12,3 +14,4 @@ services:
       - com.github.image.job.id=${GITHUB_JOB:-0}
       - com.github.image.source.sha=${GITHUB_SHA:-0}
       - com.github.image.source.branch=${GITHUB_REF:-0}
+      - org.opencontainers.image.description="Sample python application providing server-side identity verification functionality using Falu."
