--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -7,7 +7,7 @@ WORKDIR /app
 
 RUN pip install pipenv
 
-COPY python .
+COPY . .
 RUN pipenv install --system --deploy --ignore-pipfile
 
 CMD ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
