--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.8'
 services:
-  identity-verification:
-    image: ghcr.io/faluapp/falu-samples/identity-verification:${DOCKER_IMAGE_TAG:-latest}
+  identity-verification-python:
+    image: ghcr.io/faluapp/falu-samples/identity-verification-python:${DOCKER_IMAGE_TAG:-latest}
     build:
-      dockerfile: Dockerfile.python
-      context: .
+      context: identity-verification/python
+      dockerfile: ../../Dockerfile.python
       cache_from:
-        - ghcr.io/faluapp/falu-samples/identity-verification:latest
+        - ghcr.io/faluapp/falu-samples/identity-verification-python:latest
     ports: ["8000:8000"]
     labels:
       - com.github.image.run.id=${GITHUB_RUN_ID:-0}
