--- a/identity-verification/java/build.gradle
+++ b/identity-verification/java/build.gradle
@@ -1,26 +1,31 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.2.4'
-	id 'io.spring.dependency-management' version '1.1.4'
+    id 'java'
+    id 'org.springframework.boot' version '3.2.4'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'io.falu.samples'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '22'
+    sourceCompatibility = '17'
+    targetCompatibility = '17'
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "io.falu:falu-java:1.4.14"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
+    compileOnly 'org.springframework.boot:spring-boot-starter-tomcat'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
