--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,3 +40,12 @@ updates:
     groups:
       python-packages:
         patterns: ['*']
+
+  - package-ecosystem: 'gradle'
+    directory: '/identity-verification/java'
+    schedule:
+      interval: 'monthly'
+      time: '02:00'
+    reviewers:
+      - sethonyango
+      - mburumaxwell
