Retain the new line at the end then add groups for all dependencies.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -49,3 +49,7 @@ updates:
     reviewers:
       - sethonyango
       - mburumaxwell
+    groups:
+      spring-framework:
+        patterns:
+          - "org.springframework.boot"
