--- a/identity-verification/java/build.gradle
+++ b/identity-verification/java/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.4'
     implementation "io.falu:falu-java:1.4.14"
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
 
