Add Java Identity Verification Sample Apps and Related Documentation (#47)
Fixes: https://github.com/faluapp/falu-backend/issues/177
Fixes: https://github.com/faluapp/falu-backend/issues/175

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,3 +40,16 @@ updates:
     groups:
       python-packages:
         patterns: ['*']
+
+  - package-ecosystem: 'gradle'
+    directory: '/identity-verification/java'
+    schedule:
+      interval: 'monthly'
+      time: '02:00'
+    reviewers:
+      - sethonyango
+      - mburumaxwell
+    groups:
+      spring-framework:
+        patterns:
+          - "org.springframework.boot"
