Samples should have their own dockerfiles for ease of cloning

--- a/identity-verification/python/Dockerfile
+++ b/identity-verification/python/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.11-slim-buster
 
+LABEL org.opencontainers.image.description="Sample python application providing server-side identity verification functionality using Falu."
 EXPOSE 8000
 ENV PYTHONUNBUFFERED 1
 
