Add patterns for spring updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -35,4 +35,6 @@ updates:
       - mburumaxwell
     groups:
       spring-framework:
-        patterns: ['*']
+        patterns:
+          - 'io.spring.*'
+          - 'org.springframework.*'
