Update dependabot groups for python

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,8 +23,8 @@ updates:
       - sethonyango
       - mburumaxwell
     groups:
-      python-packages:
-        patterns: ['*']
+      web-api:
+        patterns: ['fastapi', 'uvicorn']
 
   - package-ecosystem: 'gradle'
     directories:
